Se agrega al main

--- a/Portafolio/Portafolioweb.html
+++ b/Portafolio/Portafolioweb.html
@@ -82,7 +82,7 @@
                 <div class="info">
                     <h3>Mokepones</h3>
                     <span>HTML</span><span>CSS</span><span>JAVASCRIPT</span>
-                    <a href="https://github.com/samuelscp11917/mokepon/tree/main" target="_blank">Ver Trabajo</a>
+                    <a href="https://github.com/samuelscp11917/programacion/tree/main/mokepon" target="_blank">Ver Trabajo</a>
                 </div>
             </div>
             <div class="item programacion">
@@ -90,7 +90,7 @@
                 <div class="info">
                     <h3>Piedra,Papel o Tijera</h3>
                     <span>HTML</span><span>JAVASCRIPT</span>
-                    <a href="https://github.com/samuelscp11917/Piedra-papel-tijera/tree/main" target="_blank">Ver Trabajo</a>
+                    <a href="https://github.com/samuelscp11917/programacion/blob/main/piedrapapeltijera.html" target="_blank">Ver Trabajo</a>
                 </div>
             </div>
         </div>
