--- a/Portafolio/Portafolioweb.html
+++ b/Portafolio/Portafolioweb.html
@@ -34,7 +34,7 @@
             <div class="fila">
                 <div class="col">
                     <h2>Desarrollador Web Fullstack</h2>
-                    <p>Hola yo soy Samuel y estoy empezando a darle un impulso a mi vida profesional y personal en el campo de la tecnología y desarrollo web. Por medio de esta página conoceras un poco más sobre mi, quien soy, mis aspiraciones, que quiero hacer y mucho más.</p>
+                    <p>Hola yo soy Samuel y estoy empezando a darle un impulso a mi vida profesional y personal en el campo de la tecnología y desarrollo web. Por medio de esta página conoceras un poco más sobre mi, quien soy, mis aspiraciones, que quiero hacer y mucho más. Siempre me ha llamado el tema del desarrollo web y programación porque me gustan los juegos y veía videos de como se hace desde 0, me gustó mucho y me gustaría llegar a estar en un equipo para la creación de videojuegos.</p>
                     <a href="https://www.canva.com/design/DAFpAoSJxF0/6tVpBu7r27YlXZYugGgzyA/view?utm_content=DAFpAoSJxF0&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink" target="_blank">Hoja de Vida</a>
                 </div>
                 <div class="col">
@@ -83,6 +83,7 @@
                     <h3>Mokepones</h3>
                     <span>HTML</span><span>CSS</span><span>JAVASCRIPT</span>
                     <a href="https://github.com/samuelscp11917/programacion/tree/main/mokepon" target="_blank">Ver Trabajo</a>
+                    <p>Este proyecto lo cree realizando el curso de platzi de programación básica, es un juego de batallas tipo pokemon muy divertido porque hay diferentes personajes, ataques y un modo de juego sencillo.</p>
                 </div>
             </div>
             <div class="item programacion">
@@ -91,6 +92,7 @@
                     <h3>Piedra,Papel o Tijera</h3>
                     <span>HTML</span><span>JAVASCRIPT</span>
                     <a href="https://github.com/samuelscp11917/programacion/blob/main/piedrapapeltijera.html" target="_blank">Ver Trabajo</a>
+                    <p>Este proyecto es un trabajo básico pero bien estructurado y llega a ser divertido, es un piedra papel o tijera dinámico en el que batallas contra la PC</p>
                 </div>
             </div>
         </div>
